# rust-demo

actix-gcd/: Cargo.toml
actix-gcd/src/: main.rs
another-todor/: README.md
another-todor/to_do/core/: Cargo.toml
another-todor/to_do/core/src/: enums.rs  main.rs
another-todor/to_do/core/src/api/basic_actions/: create.rs
another-todor/to_do/core/src/structs/: base.rs  done.rs  pending.rs
another-todor/to_do/dal/: Cargo.toml
another-todor/to_do/dal/src/: json_file.rs
axum-hello-world/: Cargo.toml  README.md
axum-hello-world/src/: lib.rs  main.rs
axum-hello-world/src/routes/: always_errors.rs  body_json.rs  custom_header.rs  get_cache.rs  get_json.rs  make_request.rs  mod.rs  query_params.rs  returns_201.rs  set_middleware_custom_header.rs
concurrency-demo/: Cargo.toml  README.md
concurrency-demo/src/: main.rs
concurrency-demo/src/threads/: leak.rs  mod.rs  reference_counting.rs  scoped_thread.rs  simple_thread.rs  static_value.rs
data-structures/: README.md
data-structures/src/: doubly_linked_list.rs  lib.rs  linked_list.rs
grrs/: Cargo.toml
grrs/src/: main.rs
grrs/tests/: cli.rs
httpie/: Cargo.toml  README.md
httpie/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot-threaded/: Cargo.toml  README.md
mandelbrot-threaded/src/: main.rs
mandelbrot/src/: main.rs
project-euler/src/: largest_prime_factor.rs  main.rs
qa-web-service/: .env_sample  .gitignore  Cargo.toml  README.md  build.rs  log4rs.yaml  setup.toml
qa-web-service/handle-errors/: Cargo.toml
qa-web-service/handle-errors/src/: lib.rs
qa-web-service/resources/: question.json
qa-web-service/src/: main.rs  profanity.rs  store.rs
qa-web-service/src/routes/: answer.rs  authenticate.rs  mod.rs  question.rs
qa-web-service/src/types/: account.rs  answer.rs  pagination.rs  question.rs
queryer-py-js/: README.md
queryer-py-js/queryer/: Cargo.toml  README.md
queryer-py-js/queryer-py/: Cargo.toml
queryer-py-js/queryer-py/src/: lib.rs
queryer-py-js/queryer/examples/: covid.rs
queryer-py-js/queryer/src/: lib.rs
queryer/examples/: covid_queryer.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs
quickreplace/src/: main.rs
socks5proxy/: README.md
socks5proxy/src/: main.rs
thumbor/: Cargo.toml  README.md  abi.proto
thumbor/src/: .gitignore  main.rs
thumbor/src/engine/: photon.rs
thumbor/src/pb/: mod.rs
todor/: Cargo.toml  README.md
todor-improved/: Cargo.toml
todor-improved/src/: cli.rs  commands.rs  database.rs  main.rs  utils.rs
todor/src/: database.rs  main.rs
