workspace = { members = ["handle-errors"] }
[package]
name = "qa-web-service"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
warp = "0.3.7"
handle-errors = { path = "handle-errors" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
sqlx = { version = "0.8.2", features = ["runtime-tokio", "migrate", "postgres"] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
rand = "0.8.5"
rust-argon2 = "2.1.0"
paseto = "2.0.2"
chrono = "0.4.39"
config = { version = "0.15.6", features = ["toml"] }
dotenv = "0.15.0"

[build-dependencies]
platforms = "3.5.0"
