[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = "0.6.3"
axum-macros = "0.3.7"
base64 = "0.21.0"
bytes = "1.3.0"
image = "0.24.5"
lazy_static = "1.4.0"
lru = "0.10.0"
percent-encoding = "2.2.0"
photon-rs = "0.3.1"
prost = "0.11.6"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.152"
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
prost-build = "0.11.6"
