[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
polars = { version = "0.35.4", features = ["json", "lazy"] }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
sqlparser = "0.39.0"
tokio = { version = "1.34.0", features = ["fs"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
